--- a/views/partials/facebook.handlebars
+++ b/views/partials/facebook.handlebars
@@ -18,4 +18,13 @@
      js.src = "https://connect.facebook.net/en_US/all.js";
      fjs.parentNode.insertBefore(js, fjs);
    }(document, 'script', 'facebook-jssdk'));
+
+   function Facebook_login () {
+            FB.getLoginStatus(function(response) {
+                if (response.status === 'connected') {
+                    window.location = "THE URL TO PROCESS THE LOGIN";
+
+                }
+            });
+          }     
 </script>
