--- a/views/partials/facebook.handlebars
+++ b/views/partials/facebook.handlebars
@@ -2,7 +2,7 @@
   window.fbAsyncInit = function() {
     FB.init({
       appId      : '{2241422966128032}',
-      cookie     : true,
+      cookie     : false,
       xfbml      : true,
       version    : '{v3.2}'
     });
