--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -26,6 +26,12 @@
 </head>
 
 <body>
+	<div
+  class="fb-like"
+  data-share="true"
+  data-width="450"
+  data-show-faces="true">
+</div>
 	<div class="container">
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
