--- a/views/partials/facebook.handlebars
+++ b/views/partials/facebook.handlebars
@@ -1,30 +1,18 @@
 <script>
   window.fbAsyncInit = function() {
     FB.init({
-      appId      : '{2241422966128032}',
-      cookie     : false,
+      appId      : '2241422966128032',
       xfbml      : true,
-      version    : '{v3.2}'
+      version    : 'v3.2'
     });
-      
-    FB.AppEvents.logPageView();   
-      
+    FB.AppEvents.logPageView();
   };
 
   (function(d, s, id){
      var js, fjs = d.getElementsByTagName(s)[0];
      if (d.getElementById(id)) {return;}
      js = d.createElement(s); js.id = id;
-     js.src = "https://connect.facebook.net/en_US/all.js";
+     js.src = "https://connect.facebook.net/en_US/sdk.js";
      fjs.parentNode.insertBefore(js, fjs);
    }(document, 'script', 'facebook-jssdk'));
-
-   function Facebook_login () {
-            FB.getLoginStatus(function(response) {
-                if (response.status === 'connected') {
-                    window.location = "THE URL TO PROCESS THE LOGIN";
-
-                }
-            });
-          }     
 </script>
