--- a/views/partials/facebook.handlebars
+++ b/views/partials/facebook.handlebars
@@ -1,7 +1,7 @@
 <script>
   window.fbAsyncInit = function() {
     FB.init({
-      appId      : '2241422966128032',
+      appId      : 2241422966128032,
       xfbml      : true,
       version    : 'v3.2'
     });
