--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -34,6 +34,7 @@
   data-show-faces="true">
 </div>
 	<div class="container">
+		<script src="//connect.facebook.net/en_US/all.js"></script>
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
 		<div class="jumbotron">
