--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -29,7 +29,7 @@
 	{{> facebook}}
 </div>
 	<div class="container">
-		<script src="//connect.facebook.net/en_US/all.js"></script>
+<!-- 		<script src="//connect.facebook.net/en_US/all.js"></script> -->
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
 		<div class="jumbotron">
